# manim-generator

./: .env.example  .gitignore  README.md  pyproject.toml  run_neuron.py
examples/: prompts.md
src/manim_gen/: __init__.py  __main__.py  cli.py  codegen.py  llm.py  narration.py  planner.py  renderer.py  safety.py  types.py
